# matasano

./: .gitignore  CMakeLists.txt  Makefile  cryptlib.c  cryptlib.h  main.c  scratch.txt
src/: CMakeLists.txt  bytes-node.c  bytes-node.h  bytes.c  bytes.h  cryptlib.c  cryptlib.h  dataconvert.c  dataconvert.h  datamanip.c  datamanip.h  main.c  ref.c  ref.h  score.c  score.h
tests/: CMakeLists.txt  test-bytes-node.c  test-bytes.c  test-cryptlib.c  test-dataconvert.c  test-datamanip.c  test-score.c  testing-utils.c  testing-utils.h  unit-test.h
