enable_testing()
set(LIBS ${LIBS} cryptlib)
include_directories(. ../src)
add_executable(test-dataconvert test-dataconvert.c)
add_executable(test-score test-score.c)
add_executable(test-bytes-node test-bytes-node.c)
target_link_libraries(test-dataconvert ${LIBS} cmocka)
target_link_libraries(test-score ${LIBS} cmocka)
target_link_libraries(test-bytes-node ${LIBS} cmocka)
add_test(test-dataconvert ${CMAKE_CURRENT_BINARY_DIR}/test-dataconvert)
add_test(test-score ${CMAKE_CURRENT_BINARY_DIR}/test-score)
add_test(test-bytes-node ${CMAKE_CURRENT_BINARY_DIR}/test-bytes-node)
