enable_testing()
set(LIBS ${LIBS} cryptlib)
include_directories(. ../src)
add_executable(test-dataconvert test-dataconvert.c)
add_executable(test-score test-score.c)
add_executable(test-bytes-node test-bytes-node.c)
add_executable(test-datamanip test-datamanip.c)
add_executable(test-cryptlib test-cryptlib.c)
target_link_libraries(test-dataconvert ${LIBS} cmocka)
target_link_libraries(test-score ${LIBS} cmocka)
target_link_libraries(test-bytes-node ${LIBS} cmocka)
target_link_libraries(test-datamanip ${LIBS} cmocka)
target_link_libraries(test-cryptlib ${LIBS} cmocka)
add_test(test-dataconvert ${CMAKE_CURRENT_BINARY_DIR}/test-dataconvert)
add_test(test-score ${CMAKE_CURRENT_BINARY_DIR}/test-score)
add_test(test-bytes-node ${CMAKE_CURRENT_BINARY_DIR}/test-bytes-node)
add_test(test-datamanip ${CMAKE_CURRENT_BINARY_DIR}/test-datamanip)
add_test(test-cryptlib ${CMAKE_CURRENT_BINARY_DIR}/test-cryptlib)
